gcc/testsuite/rust/rustc/ui/fmt/issue-104142.rs
fn main() {
    println!(
        r#"
    \"\'}､"# // { dg-error "" "" { target *-*-* } }
    );
}

